--- a/package.json
+++ b/package.json
@@ -59,8 +59,13 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^2.1.3",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.7",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
